# pate

./: CMakeLists.txt  INSTALL.txt  README.txt
cmake/modules/: FindPyKDE4.cmake  FindPyKDE4.py  FindPythonLibrary.cmake  SIPMacros.cmake
sip/kate/: katemod.sip
src/: CMakeLists.txt  config.h.cmake  engine.cpp  engine.h  plugin.cpp  plugin.h  utilities.cpp  utilities.h
src/kate/: __init__.py  gui.py
src/plugins/: close_tag.py  console.py  expand.py
src/plugins/expand/: all.expand  all.expandc  expand.py  text_html.expand  text_x-python.expand
src/plugins/source/: source.py  source_cpp.py  source_python.py
